# carpe-vitam

./: .env.example  .gitignore  CLAUDE.md  README.md  SETUP.md  STATUS.md  WISHLIST.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_sex_to_users.py  003_add_file_hash_to_lab_reports.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/extraction/: base.py  canonicalizer.py  pipeline.py  registry.py  unit_converter.py
backend/app/extraction/canon_data/: related_tests.json  unit_rules.json
backend/app/extraction/extractors/: __init__.py  generic_pdf.py  redcliffe_pdf.py  thyrocare_pdf.py
backend/app/models/: __init__.py  analyte.py  family.py  lab_report.py  test_result.py  user.py
backend/app/routers/: auth.py  families.py  results.py  uploads.py
backend/app/schemas/: auth.py  families.py  results.py  uploads.py
backend/app/services/: auth_service.py  result_service.py  upload_service.py
backend/app/tests/: conftest.py  test_families.py
backend/scripts/: audit_unrecognized.py  deduplicate.py  reextract_missing_lab_names.py  seed_analyte_catalog.py  seed_analytes.py  seed_missing_analytes.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: auth.ts  client.ts  families.ts  results.ts
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  RegisterPage.tsx  UploadPage.tsx
frontend/src/store/: authStore.ts
scripts/: setup.sh
(+5 files in other folders)
